[gd_scene format=3 uid="uid://d0qgslqpuw3ps"]

[ext_resource type="Script" uid="uid://l0in4ahl7f44" path="res://scripts/brickBreaker/brick.gd" id="1_0w5h4"]
[ext_resource type="PackedScene" uid="uid://b21tx3018swjy" path="res://scenes/brickBreaker/brick_audio_player.tscn" id="2_7btvx"]

[sub_resource type="Animation" id="Animation_c34n8"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealthySprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamagedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_7mekc"]
resource_name = "dink"
length = 0.15
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HealthySprite:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DamagedSprite:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.06666667, 0.13333334),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_ci8dj"]
_data = {
&"RESET": SubResource("Animation_c34n8"),
&"dink": SubResource("Animation_7mekc")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0w5h4"]
size = Vector2(120, 56)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_7btvx"]
size = Vector2(122, 58)

[node name="Brick" type="Node2D" unique_id=71762052 groups=["Brick"]]
script = ExtResource("1_0w5h4")

[node name="BrickAudioPlayer" parent="." unique_id=1593854875 instance=ExtResource("2_7btvx")]

[node name="HealthySprite" type="Sprite2D" parent="." unique_id=725831281]

[node name="DamagedSprite" type="Sprite2D" parent="." unique_id=1704323230]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="." unique_id=1044313387]
libraries/ = SubResource("AnimationLibrary_ci8dj")

[node name="BounceCollider" type="RigidBody2D" parent="." unique_id=71987378 groups=["Brick"]]
collision_layer = 2
gravity_scale = 0.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BounceCollider" unique_id=687979983]
shape = SubResource("RectangleShape2D_0w5h4")

[node name="DamageCollider" type="Area2D" parent="." unique_id=1845545761]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DamageCollider" unique_id=1510311743]
shape = SubResource("RectangleShape2D_7btvx")

[connection signal="finished" from="BrickAudioPlayer" to="." method="_on_brick_audio_player_finished"]
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
